--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,23 +1,23 @@
 #nav {
-
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 #search-history-card {
-
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 #forecast-accordian {
-
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 #main-content {
-
+    margin-top: 80px;
 }
 
 #history-btn {
-
+    margin-top: 10px;
 }
 
 .hide {
-    
+    display: none;
 }
